Fix *Complete() method for LROs to return iterator
Fixed *Complete() method on LROs to return an iterator instead of a page
(this is how it works for non-LROs).

--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -430,6 +430,10 @@ else
     {
         resultVarTarget = $"{resultVarTarget}.{ptg.ResultFieldName}";
     }
+    else if (ftg.ResultType is IteratorTypeGo itg)
+    {
+        resultVarTarget = $"{resultVarTarget}.{itg.PageField}.{itg.PageType.ResultFieldName}";
+    }
     <text>
     // Result returns the result of the asynchronous operation.
     // If the operation has not completed it will return an error.
