Small bug fixes for v3 generator
Get correct XML element type name for struct field tag.
Removed hard-coded encoding type for responder.

--- a/src/Templates/ResponderPolicy.cshtml
+++ b/src/Templates/ResponderPolicy.cshtml
@@ -16,7 +16,7 @@ package @Model.Namespace
 import (
 	"bytes"
 	"context"
-	"encoding/xml"
+	"encoding/@(Model.Encoding)"
 	"io/ioutil"
 
 	"@CodeNamerGo.Instance.PipelineImportPath"
@@ -74,7 +74,7 @@ func validateResponse(resp pipeline.Response, successStatusCodes ...int) error {
 	// the service code, description and details will be populated during unmarshalling
 	responseError := NewResponseError(nil, resp.Response(), resp.Response().Status)
     if len(b) > 0 {
-	    if err = xml.Unmarshal(b, &responseError); err != nil {
+	    if err = @(Model.Encoding).Unmarshal(b, &responseError); err != nil {
             return NewResponseError(err, resp.Response(), "failed to unmarshal response body")
 	    }
     }
