--- a/src/Templates/MarshallingJson.cshtml
+++ b/src/Templates/MarshallingJson.cshtml
@@ -158,3 +158,28 @@ else
         }
         </text>
     }
+@if (Model.IsDateTimeCustomHandlingRequired || Model.IsBase64EncodingRequired)
+{
+    var internalName = Model.Name.ToCamelCase();
+    var rec = Model.Name.ToString().ToShortName();
+    var local = $"{rec}2";
+<text>
+    // MarshalJSON implements the json.Marshaler interface for @Model.Name.
+    func (@rec @Model.Name) MarshalJSON() ([]byte, error) {
+        if reflect.TypeOf((*@Model.Name)(nil)).Elem().Size() != reflect.TypeOf((*@internalName)(nil)).Elem().Size() {
+            panic("size mismatch between @Model.Name and @internalName")
+        }
+        @local := (*@internalName)(unsafe.Pointer(&@rec))
+        return json.Marshal(*@local)
+    }
+
+    // UnmarshalJSON implements the json.Unmarshaler interface for @Model.Name.
+    func (@rec *@Model.Name) UnmarshalJSON(b []byte) error {
+        if reflect.TypeOf((*@Model.Name)(nil)).Elem().Size() != reflect.TypeOf((*@internalName)(nil)).Elem().Size() {
+            panic("size mismatch between @Model.Name and @internalName")
+        }
+        @local := (*@internalName)(unsafe.Pointer(@rec))
+        return json.Unmarshal(b, @local)
+    }
+</text>
+}
