Centralize calls to panic
Added validateError() that will panic on non-nil error.
If reading a response body fails don't wrap the error so the pipeline
will recognize the error and retry as appropriate.

--- a/src/Templates/MarshallingJson.cshtml
+++ b/src/Templates/MarshallingJson.cshtml
@@ -167,7 +167,7 @@ else
     // MarshalJSON implements the json.Marshaler interface for @Model.Name.
     func (@rec @Model.Name) MarshalJSON() ([]byte, error) {
         if reflect.TypeOf((*@Model.Name)(nil)).Elem().Size() != reflect.TypeOf((*@internalName)(nil)).Elem().Size() {
-            panic("size mismatch between @Model.Name and @internalName")
+            validateError(errors.New("size mismatch between @Model.Name and @internalName"))
         }
         @local := (*@internalName)(unsafe.Pointer(&@rec))
         return json.Marshal(*@local)
@@ -176,7 +176,7 @@ else
     // UnmarshalJSON implements the json.Unmarshaler interface for @Model.Name.
     func (@rec *@Model.Name) UnmarshalJSON(b []byte) error {
         if reflect.TypeOf((*@Model.Name)(nil)).Elem().Size() != reflect.TypeOf((*@internalName)(nil)).Elem().Size() {
-            panic("size mismatch between @Model.Name and @internalName")
+            validateError(errors.New("size mismatch between @Model.Name and @internalName"))
         }
         @local := (*@internalName)(unsafe.Pointer(@rec))
         return json.Unmarshal(b, @local)
