--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -180,7 +180,7 @@ func (client @(Model.MethodGroup.ClientName)) @(opIdCamelCase)Responder(resp pip
     defer resp.Response().Body.Close()
     b, err:= ioutil.ReadAll(resp.Response().Body)
     if err != nil {
-        return result, NewResponseError(err, resp.Response(), "failed to read response body")
+        return result, err
     }
     if len(b) > 0 {
         b = removeBOM(b)
