--- a/src/Templates/ResponderPolicy.cshtml
+++ b/src/Templates/ResponderPolicy.cshtml
@@ -68,7 +68,7 @@ func validateResponse(resp pipeline.Response, successStatusCodes ...int) error {
 	defer resp.Response().Body.Close()
 	b, err := ioutil.ReadAll(resp.Response().Body)
 	if err != nil {
-		return NewResponseError(err, resp.Response(), "failed to read response body")
+		return err
 	}
 
 	// the service code, description and details will be populated during unmarshalling
