--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -223,7 +223,7 @@ else
     </text>
 }
 
-@if (Model.HasPolymorphicFields || Model.HasFlattenedFields || Model.AdditionalPropertiesField != null)
+@if (Model.NeedsCustomMarshalling)
 {
     var vsp = new VariableScopeProvider();
     var receiverVar = Model.Name.FixedValue.ToVariableName(vsp);
