Fix unmarshalling of additional properties (#150)
* Fix unmarshalling of additional properties

Generator now generates UnmarshalJSON() method for types that contain
additional properties.
Add missing tests for additional properties.

* Update test server and regenerate tests

* Refactor check into NeedsCustomMarshalling property

--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -223,7 +223,7 @@ else
     </text>
 }
 
-@if (Model.HasPolymorphicFields || Model.HasFlattenedFields)
+@if (Model.NeedsCustomMarshalling)
 {
     var vsp = new VariableScopeProvider();
     var receiverVar = Model.Name.FixedValue.ToVariableName(vsp);
