--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -355,6 +355,11 @@ if (modelType is DictionaryTypeGo dictionaryType && dictionaryType.SupportsAddit
         // NextWithContext advances to the next page of values.  If there was an error making
         // the request the page does not advance and the error is returned.
         func (page * @Model.Name) NextWithContext(ctx context.Context) error {
+            ctx = tracing.StartSpan(ctx, "@(modelPageType.AdvancerFqdn)")
+            defer func() {
+                sc := next.StatusCode
+                tracing.EndSpan(ctx, sc, err)
+            }()
         next, err := page.@(modelPageType.FnFieldName)(ctx, page.@modelPageType.ResultFieldName)
         if err != nil {
         return err
@@ -398,6 +403,11 @@ if (modelType is DictionaryTypeGo dictionaryType && dictionaryType.SupportsAddit
         // NextWithContext advances to the next value.  If there was an error making
         // the request the iterator does not advance and the error is returned.
         func (iter * @Model.Name) NextWithContext(ctx context.Context) error {
+            ctx = tracing.StartSpan(ctx, "@(iterType.AdvancerFqdn)")
+            defer func() {
+                sc := iter.Response().StatusCode
+                tracing.EndSpan(ctx, sc, err)
+            }()
         iter.@iterType.IndexField++
         if iter.@iterType.IndexField < len(iter. @(iterType.PageField).Values()) {
         return nil
